src/test/deca/context/invalid/void_class_name.deca
/*
    Description : Classe nommée void

    Résultat : Erreur contextuelle (règle 1.3 condition implicite)
*/
class void{}
